[package]
name = "tinysearch"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/takashiidobe/tinysearch"
description = "A small search engine in rust"
documentation = "https://docs.rs/tinysearch"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
bincode = "1.3.3"
glob = "0.3.1"
patricia_tree = { version = "0.5.7", features = ["serde"] }
serde = { version = "1.0.160", features = ["derive"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
